# ChartLib

./: .gitignore  CMakeLists.txt  Chart  Makefile  README.md  main.cpp
Enum/: Color.cpp  Linearity.cpp  Scale.cpp  Style.cpp
Header/: Plot.hpp  PlotData.hpp  PlotDataFunction.hpp  PlotDataOrderedSet.hpp  PlotDataSet.hpp  TextChart.hpp
Headers/: TextChart.hpp
Include/: ChartLib  Color.hpp  IDecoration.hpp  Plot.hpp  PlotData.hpp  PlotDataFunction.hpp  PlotDataOrderedSet.hpp  PlotDataSet.hpp  SimpleDoubleLineFrame.hpp  Style.hpp  XAxisLabels.hpp  YAxisLabels.hpp
Include/ChartLib/: Color.hpp  IDecoration.hpp  Plot.hpp  PlotData.hpp  PlotDataFunction.hpp  PlotDataSet.hpp  Scale.hpp  SimpleDoubleLineFrame.hpp  Style.hpp  XAxisLabels.hpp  YAxisLabels.hpp
Source/: Plot.cpp  PlotData.cpp  PlotDataFunction.cpp  PlotDataOrderedSet.cpp  PlotDataSet.cpp  SimpleDoubleLineFrame.cpp  TextChart.cpp  XAxisLabels.cpp  YAxisLabels.cpp
tests/: Plot.test.cpp  test.cpp
